Simplify the "forecasts" table
The table of forecasts under the "financials" section for an activity
currently lists this set of columns:

- start date
- end date
- currency
- value
- providing organisation
- receiving organisation

We want to simplify this so that it just shows the financial quarter
(rather than start and end dates) and the amount, plus an 'Edit' action.

--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -19,13 +19,14 @@ en:
   table:
     header:
       planned_disbursement:
+        financial_quarter: Financial quarter
         planned_disbursement_type: Type
         period_start_date: Start date
         period_end_date: End date
         currency: Currency
         providing_organisation: Provider
         receiving_organisation: Receiver
-        value: Forecasted spend amount
+        value: Amount
     body:
       planned_disbursement:
         planned_disbursement_type_options:
