--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -24,6 +24,7 @@ en:
           "true": "Yes"
           "false": "No"
         collaboration_type: What is the collaboration type for this activity?
+        country_delivery_partners: Name and acronym
         gdi: GDI
         geography_options:
           recipient_region: Region
@@ -99,6 +100,7 @@ en:
         call_present: Is there a call for this %{level}?
         call_open_date: Call open date
         call_close_date: Call close date
+        country_delivery_partners: Country delivery partner
         gdi: Is your activity affected by the Global Development Impact (GDI) policy?
         geography: Will the benefitting recipient be a region or country?
         intended_beneficiaries: What are the intended beneficiaries?
@@ -141,6 +143,7 @@ en:
         aid_type: Where an activity is not G01 or E01 we would expect most of our activity to be classified as D02 but there will be cases where C01 is more appropriate.
         call_open_date: (Enter as dd/mm/yyyy) - This is not the same as IATI Activity start date! Date call will be/was launched. Estimate sufficient until Activity Status is 'Decided'. Where there will be calls for outline and then full proposals, the opening date of the first call (outline) only is sufficient
         call_close_date: (Enter as dd/mm/yyyy) - This is not the same as IATI Activity End date! Date call will be/was closed. Estimate sufficient until Activity Status is 'Decided'. Where there will be calls for outline and then full proposals, the closing date of the first call (outline) only is sufficient
+        country_delivery_partners: "Please provide up to ten country delivery partners. A name is required, provide a acronym where applicable, for example: 'National Council for the State Funding Agencies (CONFAP)'"
         flow: Read <a href='http://reference.iatistandard.org/203/codelists/FlowType/' target='_blank'>International Aid Transparency Initiative descriptions</a> of each flow type (opens in new window)
         delivery_partner_identifier: This could be the reference you use in your internal systems
         gdi: Global Development Impact policy refocuses the way we use our ODA funding when partnering with certain countries, seeking to promote the global development impact over the local or domestic. Current GDI-Applicable countries include China and India
@@ -204,6 +207,7 @@ en:
         call_open_date: Call open date
         call_close_date: Call close date
         collaboration_type: Collaboration type
+        country_delivery_partners: Country delivery partners
         covid19_related: Is this activity related to Covid-19?
         description: Description
         form_state:
@@ -333,6 +337,7 @@ en:
         call_present: Is there a call for this %{level}?
         collaboration_type: Collaboration type
         country: What country will benefit from this activity?
+        country_delivery_partners: Country delivery partner
         covid19_related: Is this activity related to Covid-19?
         dates: What are the start and end dates for the %{level}?
         flow: Flow
@@ -369,6 +374,8 @@ en:
             actual_end_date:
               between: Date must be between %{min} years ago and %{max} years in the future
               not_in_future: Actual end date must not be in the future
+            country_delivery_partners:
+              blank: Enter at least one country delivery partner
             dates: Enter an actual start date or a planned start date for the activity
             actual_start_date:
               between: Date must be between %{min} years ago and %{max} years in the future
