--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -465,6 +465,7 @@ en:
         invalid_gcrf_challenge_area: The GCRF challenge area is invalid
         invalid_sdg_goal: The sustainable development goal is invalid
         invalid_covid19_related: The COVID 19 Related option is invalid
+        invalid_fund_pillar: The fund pillar is invalid
         invalid_oda_eligibility: The ODA Eligibility option is invalid
         invalid_programme_status: The Activity status option is invalid
         invalid_call_open_date: The Call Open Date option is in an invalid format
