--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -116,6 +116,7 @@ en:
         call_close_date: Call close date
         country_delivery_partners: Country delivery partner
         gcrf_challenge_area: GCRF challenge area
+        fund_pillar: What Newton Fund Pillar does this activity fall under?
         gdi: Is your activity affected by the Global Development Impact (GDI) policy?
         geography: Will the benefitting recipient be a region or country?
         intended_beneficiaries: What are the intended beneficiaries?
@@ -160,6 +161,7 @@ en:
         call_close_date: (Enter as dd/mm/yyyy) - This is not the same as IATI Activity End date! Date call will be/was closed. Estimate sufficient until Activity Status is 'Decided'. Where there will be calls for outline and then full proposals, the closing date of the first call (outline) only is sufficient
         country_delivery_partners: "Please provide up to ten country delivery partners. A name is required, provide a acronym where applicable, for example: 'National Council for the State Funding Agencies (CONFAP)'"
         flow: Read <a href='http://reference.iatistandard.org/203/codelists/FlowType/' target='_blank'>International Aid Transparency Initiative descriptions</a> of each flow type (opens in new window)
+        fund_pillar: The Newton Fund largely comprises three pillar activities, which all activities must fall under. Use 'Not applicable' for delivery, other non-programme/project lines.
         delivery_partner_identifier: This could be the reference you use in your internal systems
         gcrf_challenge_area: Select the most relevant GCRF challenge area for this activity. For broad programme calls, please select the challenge area most commonly represented across the individual projects within the programme. If the activity is a delivery line, you may select 'Not applicable'.
         gdi: Global Development Impact policy refocuses the way we use our ODA funding when partnering with certain countries, seeking to promote the global development impact over the local or domestic. Current GDI-Applicable countries include China and India
@@ -359,6 +361,7 @@ en:
         dates: What are the start and end dates for the %{level}?
         flow: Flow
         gcrf_challenge_area: GCRF challenge area
+        fund_pillar: What Newton Fund Pillar does this activity fall under?
         gdi: GDI
         geography: Will the benefitting recipient be a region or country?
         delivery_partner_identifier: Enter your unique identifier
