--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -237,6 +237,7 @@ en:
           "false": "No"
           "true": "Yes"
         gcrf_challenge_area: GCRF challenge area
+        fund_pillar: Fund pillar
         gdi: GDI
         geography: Benefitting recipient geography
         delivery_partner_identifier: Delivery partner identifier
@@ -322,6 +323,11 @@ en:
         button:
           new: Add implementing organisation
         heading: Implementing organisations
+      fund_pillar:
+        "0": Not Applicable
+        "1": People
+        "2": Research
+        "3": Translation
       level:
         fund: fund (level A)
         programme: programme (level B)
