Add link to the support site in the footer

--- a/config/locales/views/footer.en.yml
+++ b/config/locales/views/footer.en.yml
@@ -5,3 +5,4 @@ en:
       cookie_statement: Cookies
       privacy_policy: Privacy policy
       accessibility_statement: Accessibility statement
+      support_site: Support
