Transactions summary is consistent with the forecasts summary
Remove currency, transaction type, disbursement channel, and providing organisation name from the summary (no changes to the data model).

Replace date with financial quarter and year.

--- a/config/locales/models/transaction.en.yml
+++ b/config/locales/models/transaction.en.yml
@@ -46,12 +46,8 @@ en:
   table:
     header:
       transaction:
-        transaction_type: Type
-        date: Date
-        currency: Currency
+        financial_quarter: Financial quarter
         value: Transaction amount
-        disbursement_channel: Disbursement channel
-        providing_organisation: Provide
         receiving_organisation: Receiver
   page_content:
     transactions:
