Fix bug on `programme_status` translation file
One of the options for programme status (`Stopped`) was not displaying correctly
on the activity details page. We were getting an error that the translation was
missing from the file. This was caused by a typo on the key for this option.

--- a/config/locales/codelists/BEIS/activity.en.yml
+++ b/config/locales/codelists/BEIS/activity.en.yml
@@ -17,6 +17,6 @@ en:
       spend_in_progress: Spend in progress
       finalisation: Finalisation
       completed: Completed
-      stoped: Stopped
+      stopped: Stopped
       cancelled: Cancelled
       paused: Paused
