Create validator for `planned_end_date`
Until now, when a user add a `planned_end_date` that is earlier than the
`planned_start_date`, RODA allows this to happen, which makes more likely for
users to accidentally report incorrect information. We need to validate that
the planned end date will always be in the future (or at least on the same day)
than the start date. We also need to warn the users with an error message if
they introduced incorrect dates.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -409,6 +409,7 @@ en:
               not_in_future: Actual start date must not be in the future
             planned_end_date:
               between: Date must be between %{min} years ago and %{max} years in the future
+              not_before_start_date: Planned end date must be after planned start date
             planned_start_date:
               between: Date must be between %{min} years ago and %{max} years in the future
             gdi:
