Show an error message when forecast not in future
Intercept `SequenceError`s in order to inform the user that they tried to add a forecasted spend for a quarter that is in the past or ongoing [1].

[1] I do have questions about this. We prefill the financial quarter and year with the current quarter values, but the validation in `PlannedDisbursementHistory#check_forecast_in_future` rejects such forecasts. Which is the correct course of action: should we accept forecasts for the current quarter, should we prefill the form with the first future quarter?

Previously, the error would bubble up uncaught and would cause a server error.

--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -43,3 +43,5 @@ en:
             value:
               inclusion: Value must be between 0.01 and 99,999,999,999.00
               not_a_number: "Value must be a valid number"
+            financial_quarter:
+              in_the_past: The forecast must be for a future financial quarter
