Importer ignores incomplete activities when assigning a parent
Raise an `invalid_parent` error if the parent being associated with a
new activity is incomplete (`form_state` isn't `completed`).

On production, we have several activities in an incomplete state, which
meant that `Activity.by_roda_identifier` would return a result, instead
of `nil`, so `parent_not_found` was not raised.

This would lead to these activities being imported and incorrectly
parented to a random activity.

Finally, the test case behaved which made writing this more complicated
than it should've been. Because `let` blocks are lazily-evaluated,
calling `new_activity_attributes` triggers the creation of
`existing_activity` which led to the `to change { ... }` expectation
always being off by one.

This was resolved by changing to a `let!` for `existing_activity`. I've
added a comment to prevent someone else making that mistake in the
future!

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -485,6 +485,7 @@ en:
         invalid_flow: The flow code is not valid
         invalid_aid_type: The aid type code is not valid
         invalid_fstc_applies: The free standing technical cooperation column is not valid
+        invalid_parent: The parent activity is not valid
         parent_not_found: The parent activity cannot be found
         cannot_create: There is no RODA fragment or parent activity present, so cannot create an Activity
         cannot_update:
