--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -1,5 +1,14 @@
 ---
 en:
+  action:
+    activity:
+      download:
+        button: Download activity CSV template
+      upload:
+        button: Upload and continue
+        file_missing: Please upload a valid CSV file
+        link: Upload activities
+        success: The activities were successfully imported.
   document_title:
     activity:
       edit: Activity %{name} - Publish to IATI
@@ -106,6 +115,7 @@ en:
           "true": "Yes"
           "false": "No"
         uk_dp_named_contact: Who is the UK delivery partner named contact for this activity?
+        csv_file: Activity spreadsheet
     legend:
       activity:
         aid_type: What is the aid type?
@@ -209,6 +219,7 @@ en:
             "D01": "Experts, consultants, teachers, academics, researchers, volunteers and contributions to public and private bodies for sending experts to developing countries."
             "D02": "Provision of technical assistance in recipient countries outside of project described in project-type interventions (C01). This includes conferences, workshops and seminars but does not include activities such as scholarships/training described in (E01)"
             "G01": "Costs of development assistance programmes not already included under other ODA items as an integral part of the costs of delivering or implementing the aid provided. This includes delivery costs and in-house agency staff and contractors but not donor experts and consultants"
+        csv_file: Upload a spreadsheet containing activity information in CSV format.
       organisation:
         hint: The organisation this activity is associated with
   summary:
@@ -353,6 +364,7 @@ en:
       details: Details
       financials: Financials
       children: Child activities
+      upload: Upload bulk activity data
     activity_form:
       show:
         aid_type: Aid type
