Provide a user-facing interface for bulk uploading forecasts
This exposes the functionality of ImportPlannedDisbursements to end
users via the website. It is closely modelled on the same workflow for
transactions.

The user begins by downloading a spreadsheet template containing a list
of all the activities covered by the current report. This template lists
the name, delivery partner ID, and RODA ID for each activity.

After these three columns, the user must add more columns for thw
quarters they wish to add forecasts for. The format for the column name
is `FC <year> FY Q<quarter>`, for example:

    FC 2020/21 FY Q3

This is based on the format of the spreadsheets we were given to
backfill the forecasts for 2020/21 Q2. There are some usability
questions around this design and I expect we'll revise it; this commit
is purely designed to expose the existing functionality on the website.

--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -8,14 +8,23 @@ en:
         success: Forecasted spend successfully updated
       destroy:
         success: Forecasted spend successfully deleted
+      download:
+        button: Download CSV template
+      upload:
+        button: Upload and continue
+        file_missing: Please upload a valid CSV file
+        link: Upload forecasts
+        success: The forecasts were successfully imported.
   form:
     label:
       planned_disbursement:
+        csv_file: Forecast spreadsheet
         value: Forecasted spend amount
     legend:
       planned_disbursement:
     hint:
       planned_disbursement:
+        csv_file: Upload a spreadsheet containing forecast information in CSV format.
         receiving_organisation: The organisation receiving the money from this transaction.
         receiving_organisation_reference_html: For example, GB-COH-12345. To lookup codes or for more infomation see <a href="http://org-id.guide/" target="_blank" class="govuk-link">the organisation finder service (Opens in new window)</a>
   table:
@@ -37,6 +46,7 @@ en:
     planned_disbursement:
       edit: Edit forecasted spend for %{quarter}
       new: Add forecasted spend
+      upload: Upload bulk forecasts data
   activerecord:
     errors:
       models:
