Use Error objects in ImportPlannedDisbursements
This importer was originally designed to be invoked by a command-line
program and so its errors were just strings to be printed to the
terminal.

To make this class usable from the web, we need to expose error
information in a structured way so we can display it in a table. This
borrows the Error model from ImportTransactions to represent the cell in
a CSV file that caused the error.

--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -47,3 +47,8 @@ en:
               not_a_number: "Value must be a valid number"
             financial_quarter:
               in_the_past: The forecast must be for a future financial quarter
+  importer:
+    errors:
+      planned_disbursement:
+        non_numeric_value: The value must be numeric
+        unknown_identifier: Identifier is not recognised
