Report errors from forecast bulk uploads
Here we add the functionality for displaying any errors resulting from
the processing of the CSV handled by ImportPlannedDisbursements. We also
add a check for encoding errors in the upladed file.

--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -63,3 +63,4 @@ en:
         non_numeric_value: The value must be numeric
         unauthorised: You are not authorised to report against this activity
         unknown_identifier: Identifier is not recognised
+        invalid_characters: This cell contains invalid characters
