Fix typos in spec descriptions
Typos in spec descriptions do not affect the code in any way! They only affect me, as I watch the test suite go by and a typo lodges in my brain.

--- a/config/locales/views/not_authorised.en.yml
+++ b/config/locales/views/not_authorised.en.yml
@@ -1,12 +1,12 @@
 # This translation file is used for Pundit errors
-# Use the Pundit polciy class name as the key
+# Use the Pundit policy class name as the key
 # otherwise the default is used
 #
 # For example one might add:
 #
 # not_authorised:
 #   organisation_policy:
-#     show?: You have not been authorised to see this organiastion.
+#     show?: You have not been authorised to see this organisation.
 ---
 en:
   not_authorised:
