Views and specs for new activities view
After creating the routes and the controller actions for these new two tabs,
we are now adding the custom views that will display the content in the way
we want.

This commit also contains test coverage for this new feature.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -355,6 +355,9 @@ en:
       financials: Financials
       children: Child activities
       comments: Comments
+    activities:
+      current: Current
+      historic: Historic
   page_title:
     activity:
       index: Activities
@@ -365,6 +368,9 @@ en:
       financials: Financials
       children: Child activities
       upload: Upload bulk activity data
+    activities:
+      current: Current activities
+      historic: Historic activities
     activity_form:
       show:
         aid_type: Aid type
