Show activities grouped by parent project
We were showing the delivery partner identifier before. This is now replaced with the RODA identifier.

Third-party projects are shown grouped under their parent project, and only their identifier fragment is needed for display.

Co-authored-by: jcoglan <james.coglan@dxw.com>

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -292,7 +292,7 @@ en:
   table:
     header:
       activity:
-        identifier: Identifier
+        identifier: RODA Identifier
         title: Name
         level: Level
         actual_spend_for_quarter: "%{financial_quarter_and_year} actual spend"
