--- a/config/locales/models/budget.en.yml
+++ b/config/locales/models/budget.en.yml
@@ -11,6 +11,7 @@ en:
       budget:
         currency: Currency
         value: Budget amount
+        financial_year: Financial year
         budget_type_options:
           original: The original budget allocated to the activity
           updated: The updated budget for an activity
@@ -28,6 +29,9 @@ en:
       budget:
         period_end_date: Period end date must not be more than one year after the period start date. For example, 11 3 2021
         period_start_date: For example, 11 3 2020
+    prompt:
+      budget:
+        financial_year: Select a financial year
   table:
     header:
       budget:
@@ -79,3 +83,5 @@ en:
               blank: Enter a budget status
             funding_type:
               blank: Select a funding type
+            financial_year:
+              blank: Select a financial year
