Validate Channel of delivery code
It is no longer permitted to import “N/A” values.

The validation checks strict inclusion in the BEIS-allowed list of codes.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -472,6 +472,8 @@ en:
               inclusion: You must select "Yes" or "No"
             gcrf_challenge_area:
               blank: Select a GCRF challenge area
+            channel_of_delivery_code:
+              invalid: Please select a valid Channel of delivery code
   importer:
     errors:
       activity:
