Use 'high_voltage' gem for static pages
We were previously using separate controllers for these, which seemed
unnecessary. Also, fixed several typos in the cookie statement page.

I've also removed/combined several tests related to static pages.

--- a/config/locales/views/cookie_statement.en.yml
+++ b/config/locales/views/cookie_statement.en.yml
@@ -1,27 +1,4 @@
 ---
 en:
   cookie_statement:
-    gathering_feedback:
-      paragraph:
-      - we use google forms software to collect information about what you thought of the roda service. we do this to help make sure the site is meeting the needs of its users and to help us make improvements.
-      - for more information on google‘s cookies, please see the <a href="https://policies.google.com/technologies/cookies?hl=en-uk" class="govuk-link">google privacy and terms</a> site.
-      title: gathering your feedback
-    introduction: Report your official development assistance (boda) puts small files (known as 'cookies') onto your computer to collect information about how you browse the site and allow the site to operate. find out more about the cookies we use, what they're for and when they expire.
-    strictly_necessary_cookies:
-      paragraph: these cookies do not store your personal data but are required for the service to operate.
-      table: <table class="govuk-table"> <thead class="govuk-table__head"> <tr class="govuk-table__row"> <th scope="col" class="govuk-table__header">name</th> <th scope="col" class="govuk-table__header">purpose</th> <th scope="col" class="govuk-table__header">expires</th> </tr> </thead> <tbody class="govuk-table__body"> <tr class="govuk-table__row"> <td class="govuk-table__cell">_roda_session</td> <td class="govuk-table__cell">identifies your session in roda</td> <td class="govuk-table__cell">when you close your browser or 24 hours</td> </tr> </tbody> </table>
-      title: strictly necessary cookies
-    title: Details about cookies on Report your official development assistance
-    website_use:
-      google_analytics:
-        table: <table class="govuk-table"> <thead class="govuk-table__head"> <tr class="govuk-table__row"> <th scope="col" class="govuk-table__header">Name</th> <th scope="col" class="govuk-table__header">Purpose</th> <th scope="col" class="govuk-table__header">Expires</th> </tr> </thead> <tbody class="govuk-table__body"> <tr class="govuk-table__row"> <td class="govuk-table__cell">_ga</td> <td class="govuk-table__cell">These help us count how many people visit RODA by tracking if you’ve visited before</td> <td class="govuk-table__cell">2 years</td> </tr> <tr class="govuk-table__row"> <td class="govuk-table__cell">_gid</td> <td class="govuk-table__cell">These help us count how many people visit RODA by tracking if you’ve visited before</td> <td class="govuk-table__cell">24 hours</td> </tr> <tr class="govuk-table__row"> <td class="govuk-table__cell">_gat_UA-151431879-2</td> <td class="govuk-table__cell">Used to  control the number of requests RODA makes to Google Analytics</td> <td class="govuk-table__cell">1 minute</td> </tr> </tbody> </table>
-        title: 'Google Analytics sets the following cookies:'
-      list:
-      - how you got to the site
-      - the pages you visit on RODA and how long you spend on them
-      - what you click on while you’re visiting the site
-      paragraph:
-      - We use Google Analytics software to collect anonymised information about how you use RODA. We do this to help make sure the site is meeting the needs of its users and to help us make improvements to the site.
-      - We do not allow Google to use or share the data about how you use this site.
-      - 'Google Analytics stores information about:'
-      title: Cookies that measure website use
+    title: Details about cookies on 'Report your Official Development Assistance'
