Create programmes from organisation pages
Adds the ability for BEIS users to create new programme-level activities
directly from an organisation page.

Upon clicking the button for a particular source fund, a new activity is
created with its `level`, `parent` and `source_fund` already set. The
user is then redirected to the "RODA Identifier" step of the activity
form.

This is the first stage in ensuring that new activities are always
associated to an existing parent activity, rather than first creating
'empty' activities, and then choosing the `level` and `parent` manually
over multiple form steps.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -22,6 +22,7 @@ en:
   form:
     button:
       activity:
+        new_with_source_fund: Add child activity to %{name}
         submit: Continue
     link:
       activity:
