Adding a button to download reports
We are implementing a new feature where a BEIS user can download all relevant
reports with only clicking on a button. This will save time, as they don't need
to go to each report page and download it individually.

This commit adds the button that will trigger the CSV download on the reports
index page.

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -122,6 +122,7 @@ en:
           button: Confirm submission
       download:
         button: Download report as CSV file
+        reports: Download all reports as CSV
       in_review:
         confirm:
           button: Confirm
