BEIS users can download all reports at once
With this new feature, BEIS users can download all relevant reports in just one
click. The reports they will get are those which are subject to changes or
additions on the financial data (active, submitted, in_review and
awaiting_changes). Reports that are inactive or approved will not be included
in this CSV file.

The Reports CSV file contains all the activities from the relevant reports.
These are sorted by Delivery Partner first, and then by hierarchy level. They
include the same data than the individual reports.

To avoid BEIS users getting incorrect information due to some reports being from
a different quarter (and hence having a different set of financial_quarters
information) I'm guarding against downloading the report if one or more reports
are from different financial_quarters. In that case, the user will get an error
message and the download will not happen.

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -123,6 +123,7 @@ en:
       download:
         button: Download report as CSV file
         reports: Download all reports as CSV
+        failure: Reports could not be downloaded
       in_review:
         confirm:
           button: Confirm
