Show programmes grouped by fund on organisation show page
Allow users to see a list of programmes an organisation is extending
from the organisation's show page (which is also the first page delivery
partners will see when signing into RODA).

The next step will allow users to create a child activity from this
page.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -408,6 +408,7 @@ en:
   activerecord:
     attributes:
       activity:
+        roda_identifier_compound: RODA identifier
         sector: Focus area
         sector_category: Focus area category
     errors:
