--- a/config/locales/models/transaction.en.yml
+++ b/config/locales/models/transaction.en.yml
@@ -20,6 +20,7 @@ en:
     label:
       transaction:
         csv_file: Upload CSV spreadsheet
+        csv_file_recover_from_error: Re-upload CSV spreadsheet
         currency: Currency
         description: Describe the transaction
         disbursement_channel: Disbursement channel (optional)
@@ -39,6 +40,7 @@ en:
     hint:
       transaction:
         csv_file: Upload a spreadsheet containing transaction information in CSV format.
+        csv_file_recover_from_error_html: Upload a spreadsheet containing transaction information in CSV format. We recommend <a href="%{link}" class="govuk-link">downloading this CSV template</a>.
         date: If you're reporting quarterly data, select the last day of the quarter. For example, 31 12 2020
         description: For example, 2020 quarter one spend on the Early Career Research Network project.
         disbursement_channel: The channel through which the funds will flow for this transaction.
