--- a/config/locales/views/footer.en.yml
+++ b/config/locales/views/footer.en.yml
@@ -6,3 +6,4 @@ en:
       privacy_policy: Privacy policy
       accessibility_statement: Accessibility statement
       support_site: Support
+      terms_of_service: Terms of service
