Allow transfers to be edited
This adds an endpoint for BEIS users to edit a transfer. It follows the same flow as
adding a new transfer - a user fills out the form, they're asked to confirm, and then
a confirmation message is shown as a flash after redirecting.

--- a/config/locales/models/transfer.en.yml
+++ b/config/locales/models/transfer.en.yml
@@ -3,11 +3,14 @@ en:
   page_title:
     transfer:
       new: Transfer
+      edit: Edit transfer
       confirm: Are these transfer details correct?
   action:
     transfer:
       create:
         success: Transfer successfully recorded
+      update:
+        success: Transfer successfully updated
   fields:
     transfer:
       destination: Receiving activity
