Add submitted email
This will eventually get sent to all users of the delivery partner organisation that
owns the report

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -98,6 +98,8 @@ en:
     report:
       activated:
         subject: "%{application_name} - A report has been activated"
+      submitted:
+        subject: "%{application_name} - Your report has been submitted"
   action:
     report:
       activate:
