Add the mailer action for an activated report

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -94,6 +94,10 @@ en:
         complete: This report is approved
       variance: "%{report_financial_quarter} %{report_description} variance"
       budgets: "%{report_financial_quarter} %{report_description} budgets"
+  mailer:
+    report:
+      activated:
+        subject: "%{application_name} - A report has been activated"
   action:
     report:
       activate:
