Handle forecasts in the past error when importing
Attempting to create a forecast for a past financial quarter raises an error.

We now rescue from this error and report it in the same way as any other errors in the uploaded data.

--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -68,3 +68,4 @@ en:
         unknown_identifier: Identifier is not recognised
         invalid_characters: This cell contains invalid characters
         unrecognised_column: The column heading is not recognised
+        in_the_past: The forecast must be for a future financial quarter
