List incoming transfers on the Financials page
In a similar way to how outgoing transfers are listed, this commit lists all
incoming transfers, as well as adds a button to add a transfer.

--- a/config/locales/models/outgoing_transfer.en.yml
+++ b/config/locales/models/outgoing_transfer.en.yml
@@ -6,6 +6,8 @@ en:
       edit: Edit transfer
       confirm: Are these transfer details correct?
       index: Transfers
+  intro:
+    outgoing_transfer: Transfer funds to another delivery partner activity
   action:
     outgoing_transfer:
       create:
@@ -32,6 +34,7 @@ en:
     button:
       outgoing_transfer:
         submit: Create transfer record
+        create: Record outgoing transfer
   activerecord:
     errors:
       models:
