--- a/config/locales/models/incoming_transfer.en.yml
+++ b/config/locales/models/incoming_transfer.en.yml
@@ -6,6 +6,8 @@ en:
       edit: Edit incoming transfer
       confirm: Are these transfer details correct?
       index: Incoming transfers
+  intro:
+    incoming_transfer: Record a transfer from another activity
   action:
     incoming_transfer:
       create:
@@ -32,6 +34,7 @@ en:
     button:
       incoming_transfer:
         submit: Create transfer record
+        create: Record incoming transfer
   activerecord:
     errors:
       models:
