Rename planned disbursements to forecasts
The duplicate terminology is creating confusion. “Planned disbursement” originates from IATI, but the users (mainly BEIS and delivery partners) think of them as “forecasts”.

A lot of the initial development of RODA was based on IATI reporting needs, which is how we ended up with IATI terminology.

We want to prioritise the users’ domain language, and we value consistency to make it easier for the delivery team to discuss these concepts, so we’ve decided to use “forecasts” everywhere except within the XML files generated for IATI reporting.

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -260,7 +260,7 @@ en:
         level: Level
         organisation: Organisation
         parent: Parent activity
-        planned_disbursements: Forecasted spend
+        forecasts: Forecasted spend
         planned_end_date: Planned end date
         planned_start_date: Planned start date
         policy_marker_gender: Gender
@@ -338,7 +338,7 @@ en:
         programme: programme (level B)
         project: project (level C)
         third_party_project: third-party project (level D)
-      planned_disbursements: Forecasted spend
+      forecasts: Forecasted spend
       projects: Projects (level C)
       recipient_country:
         default_selection_value: Select a recipient country
