Rename the RODA ID compound column
We currently store the RODA identifier in a column called
`roda_identifier_compound`. As we will no longer be
asking for an activity’s fragment identifier, it no longer
makes sense to call it a “compound”, so we’re renaming
it to be just the identifier

--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -428,7 +428,7 @@ en:
   activerecord:
     attributes:
       activity:
-        roda_identifier_compound: RODA identifier
+        roda_identifier: RODA identifier
         sector: Focus area
         sector_category: Focus area category
     errors:
